# sedumi

./: .gitignore  .gitmodules  .mexext  CMakeLists.txt  Makefile  README.md  addpath_sedumi.m.in  rmpath_sedumi.m.in
SeDuMi_1_3/: adendotd.mexmaci64  bwblkslv.mexmaci64  cholsplit.mexmaci64  choltmpsiz.mexmaci64  ddot.mexmaci64  extractA.mexmaci64  fwblkslv.mexmaci64  getada.m  getada1.mexmaci64  givensrot.mexmaci64  invcholfac.mexmaci64  iswnbr.mexmaci64  makereal.mexmaci64  ordmmdmex.mexmaci64  qblkmul.mexmaci64  quadadd.mexmaci64  sedumi.m  sortnnz.mexmaci64  sqrtinv.mexmaci64  symbfwblk.mexmaci64  vectril.mexmaci64  whichcpx.mexmaci64
sedumi/: adenscale.mexmaci64  blkchol.mexmaci64  bwdpr1.mexmaci64  dpr1fact.mexmaci64  eigK.mexmaci64  eyeK.mexmaci64  findblks.mexmaci64  finsymbden.mexmaci64  fwdpr1.mexmaci64  getada2.mexmaci64  getada3.mexmaci64  incorder.mexmaci64  partitA.mexmaci64  psdframeit.mexmaci64  psdinvjmul.mexmaci64  qrK.mexmaci64  qreshape.mexmaci64  statsK.mexmaci64  symfctmex.mexmaci64  urotorder.mexmaci64  vecsym.mexmaci64
